; ModuleID = '/home/carl/AnghaBench/freebsd/tools/test/testfloat/extr_testCases.c_int32RandomPInf.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/test/testfloat/extr_testCases.c_int32RandomPInf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@int32NumPInfWeightMasks = common dso_local global i64 0, align 8
@int32PInfWeightMasks = common dso_local global i32* null, align 8
@int32PInfWeightOffsets = common dso_local global i64* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @int32RandomPInf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @int32RandomPInf() #0 {
  %1 = alloca i64, align 8
  %2 = call i64 (...) @randomUint8()
  %3 = load i64, i64* @int32NumPInfWeightMasks, align 8
  %4 = urem i64 %2, %3
  store i64 %4, i64* %1, align 8
  %5 = call i32 (...) @randomUint32()
  %6 = load i32*, i32** @int32PInfWeightMasks, align 8
  %7 = load i64, i64* %1, align 8
  %8 = getelementptr inbounds i32, i32* %6, i64 %7
  %9 = load i32, i32* %8, align 4
  %10 = and i32 %5, %9
  %11 = sext i32 %10 to i64
  %12 = load i64*, i64** @int32PInfWeightOffsets, align 8
  %13 = load i64, i64* %1, align 8
  %14 = getelementptr inbounds i64, i64* %12, i64 %13
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %11, %15
  %17 = trunc i64 %16 to i32
  ret i32 %17
}

declare dso_local i64 @randomUint8(...) #1

declare dso_local i32 @randomUint32(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
